# chronicle

./: .env.example  .gitignore  NOTES-warstories.md  README.md  docker-compose.yml  pyproject.toml
.githooks/: commit-msg
eval/: dev_set.jsonl  full_set.jsonl  manifest.json
migrations/: 0001_base_schema.sql  0002_embedding_index.sql
scripts/: pr0_gate.sh
src/chronicle/: __init__.py  answer.py  chunking.py  cli.py  config.py  db.py  diff_parser.py  embeddings.py  git_ops.py  indexer.py  ingest.py  logging_config.py  reranker.py  retrieval.py  tracing.py  vector_store.py
src/chronicle/evalkit/: __init__.py  deepeval_gate.py  harness.py  metrics.py  ragas_eval.py  report.py
src/chronicle/groundtruth/: __init__.py  generator.py  schema.py  verifier.py
src/chronicle/models/: __init__.py  base.py  gemini.py  ollama.py
tests/: conftest.py  test_chunking.py  test_config.py  test_db.py  test_diff_parser.py  test_eval_harness.py  test_git_ops.py  test_groundtruth.py  test_ingest.py  test_metrics.py  test_models.py  test_retrieval.py  test_smoke.py  test_tracing.py
