[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronicle"
version = "0.0.0"
description = "Time-aware retrieval over a git repo's history — RAG on a timeline, not a snapshot."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
dependencies = [
  "typer>=0.12",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "psycopg[binary]>=3.1",
  "pgvector>=0.2.5",
  # Optional backends — imported lazily so the package imports without them,
  # but declared here because the PR0 gate needs them present.
  "google-genai>=0.3",
  "langfuse>=2.50,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]
# Local embeddings + reranker (pulls torch). Needed to actually index/retrieve.
embed = ["sentence-transformers>=3.0"]
# Eval judge + metrics. RAGAS judge runs on local Ollama.
eval = [
  "ragas>=0.2,<0.3",
  "deepeval>=1.0",
  "datasets>=2.14",
  "langchain-ollama>=0.2",
]

[project.scripts]
chron = "chronicle.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
